set latency_info source_event_type on fake KeyUp

latency_info.source_event_type for fake KeyUp event
should be OTHER instead of KEYPRESS.

Bug: 772505
Change-Id: Ie43e31426e345f427f0eeb9863fbd0449c1c67dc
Reviewed-on: https://chromium-review.googlesource.com/727370
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510072}
Former-commit-id: 9ec96ea3b62270dc5fb308efb0e02e2002bc98e7